# zigbee_z4_switch

./: .projectlinkstore  app.c  readme.md  vscode.conf  zigbee_z4_switch.pintool  zigbee_z4_switch.slcp  zigbee_z4_switch.slps
.uceditor/: .zigbee_z4_switch.%extension-silabs.simplicity_sdk%zigbee_device_config.cedit
autogen/: linkerfile.ld  sl_cli_command_table.c  sl_cli_command_table.html  sl_component_catalog.h  sl_event_handler.c  sl_iostream_handles.c  sl_iostream_handles.h  sl_power_manager_handler.c  sl_rail_util_ieee802154_phy_select.c  sli_mbedtls_config_autogen.h  sli_psa_builtin_config_autogen.h  sli_psa_config_autogen.h  zap-cli.c  zap-command.h  zap-config.h  zap-enabled-incoming-commands.h  zap-event.c  zap-event.h  zap-print.h  zap-tokens.h  zigbee_af_cluster_functions.h  zigbee_common_callback_dispatcher.c  zigbee_common_callback_dispatcher.h  zigbee_stack_callback_dispatcher.c  zigbee_stack_callback_dispatcher.h
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
cmake_gcc/: CMakeLists.txt  CMakePresets.json  zigbee_z4_switch.cmake
config/: network-steering-config.h  pin_config.h  sl_board_control_config.h  sl_cli_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_iostream_eusart_vcom_config.h  sl_mx25_flash_shutdown_eusart_config.h  sl_rail_util_pa_config.h  sl_rail_util_pa_tables_config.h  sl_rail_util_pti_config.h  sl_simple_button_btn1_config.h  sl_zigbee_pro_stack_config.h  sl_zigbee_security_link_keys_config.h  update-tc-link-key-config.h  zcl-framework-core-config.h  zigbee-bdb-3dot1-rejoin-algorithm-config.h  zigbee_device_config.h
config/zcl/: slc_args.json  zcl_config.zap
simplicity_sdk_2025.12.0/printf/: printf.c  printf.h
simplicity_sdk_2025.12.0/rail_library/plugin/sl_rail_util_built_in_phys/: sl_rail_phy_overrides.c
simplicity_sdk_2025.12.0/rail_library/plugin/sl_rail_util_ieee802154/: sl_rail_util_ieee802154_phy_select.h
simplicity_sdk_2025.12.0/zigbee/app/test/: sl_zigbee_r23_app_stubs.c
simplicity_sdk_2025.12.0/zigbee/stack/config/: config.h  sl_zigbee_callback_stubs.c  token-cache.h  (+6 more)
(+251 files in other folders)
